# Umbra

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
tests/: test_validator.py  test_watcher.py  testtest.py
umbra/: __init__.py  export.py  main.py  server.py
umbra/agents/: __init__.py  analyst.py  chat.py  documentor.py  health.py  insights.py  knowledge.py  orchestrator.py  state.py  summarizer.py  surgeon.py  tracker.py  writer.py
umbra/validators/: __init__.py  mermaid.py
umbra/watcher/: __init__.py  file_watcher.py
