[tool.poetry]
name = "umbra-architect"
version = "0.5.0"
description = "The Shadow Architect - AI-powered live architecture diagrams that update as you code"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "umbra"}]
keywords = ["architecture", "documentation", "mermaid", "ai", "llm", "diagram", "code-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Code Generators",
]
repository = "https://github.com/rida12b/Umbra"
documentation = "https://github.com/rida12b/Umbra#readme"

[tool.poetry.dependencies]
python = "^3.11"
watchdog = "^4.0.0"
langgraph = "^0.2.0"
langchain-google-genai = "^2.0.0"
python-dotenv = "^1.0.0"
rich = "^13.0.0"
click = "^8.1.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.5.0"

[tool.poetry.scripts]
umbra = "umbra.main:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

